hphp/hack/test/typecheck/finally_naming.php.exp
File "finally_naming.php", line 20, characters 12-13:
Variable $b is undefined, or not always defined (did you mean $a instead?) (Naming[2050])
